Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ package, to inspect the assassination history of Puerto Rico from 2007 to 2014.<
 
 <hr>
 
-<p>The analysis is found at this link:</p>
+<p>The analysis is found at this link: <a href="http://juandes.github.io/pr-crime-timeseries/docs/report">A time series analysis about the crime in Puerto Rico from the year 2007 to 2014</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/juandes">juandes</a></p>
