--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pr-crime-timeseries by juandes</title>
+    <title>A time series analysis about the crime in Puerto Rico from the year 2007 to 2014 by juandes</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Pr-crime-timeseries</h1>
+        <h1>A time series analysis about the crime in Puerto Rico from the year 2007 to 2014</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/juandes/pr-crime-timeseries">View the Project on GitHub <small>juandes/pr-crime-timeseries</small></a></p>
